--- a/configs/BPR-MF.yaml
+++ b/configs/BPR-MF.yaml
@@ -4,13 +4,13 @@ MODEL:
   REGS: 1e-5
 DATASET:
   ROOT_DIR: "data/yelp2018/"
-  SAMPLING: "RANDOM_SAMPLE"
+  SAMPLING: "POPULA"
   K_NEGS: 1
 DATALOADER:
   NUM_WORKERS: 8
 SOLVER:
   TYPE: "Adam"
-  BASE_LR: 0.001
+  BASE_LR: 0.0001
 TRAIN:
   BATCH_SIZE: 1024
   LOG_PERIOD: 1
