add random walk sampling

--- a/configs/BPR-MF.yaml
+++ b/configs/BPR-MF.yaml
@@ -4,7 +4,7 @@ MODEL:
   REGS: 1e-5
 DATASET:
   ROOT_DIR: "data/yelp2018/"
-  SAMPLING: "POPULA"
+  SAMPLING: "RANDOM_SAMPLE"
   K_NEGS: 1
 DATALOADER:
   NUM_WORKERS: 8
