modify test function

--- a/configs/DNS.yaml
+++ b/configs/DNS.yaml
@@ -3,14 +3,14 @@ MODEL:
   EMBEDDING_SIZE: 64
   REGS: 1e-5
 DATASET:
-  ROOT_DIR: "data/amazon-book/"
+  ROOT_DIR: "data/yelp2018/"
   SAMPLING: "RANDOM_SAMPLE"
   K_NEGS: 8
 DATALOADER:
   NUM_WORKERS: 4
 SOLVER:
   TYPE: "Adam"
-  BASE_LR: 0.001
+  BASE_LR: 0.0001
 TRAIN:
   BATCH_SIZE: 1024
   LOG_PERIOD: 1
